firefox can't print with xdg desktop portal kde
Categories
(Core :: Widget: Gtk, defect)
Tracking
()
People
(Reporter: pmargeti34, Assigned: emilio, NeedInfo)
References
(Regression)
Details
(Keywords: regression)
Attachments
(4 files)
User Agent: Mozilla/5.0 (X11; Linux x86_64; rv:95.0) Gecko/20100101 Firefox/95.0
Steps to reproduce:
I'm using KDE so I enabled widget.use-xdg-desktop-portal in about:config to use KDE file picker with firefox. With this setting on, printing is impossible from firefox
I tried to print a:
- webpage
- single image
Actual results:
Nothing. It didn't print.
Expected results:
It printed.
Comment 1•3 years ago
|
||
The Bugbug bot thinks this bug should belong to the 'Core::Printing: Output' component, and is moving the bug to that component. Please revert this change in case you think the bot is wrong.
Comment 2•3 years ago
|
||
The severity field is not set for this bug.
:emilio, could you have a look please?
For more information, please visit auto_nag documentation.
Assignee | ||
Comment 3•3 years ago
|
||
Huh, it works here both on X11 and Wayland (on Fedora 35, Firefox Nightly). To be clear this is the "Save to PDF" printer, right? Do you have any other print-related setting that could allow us to repro this?
(In reply to Emilio Cobos Álvarez (:emilio) from comment #3)
Huh, it works here both on X11 and Wayland (on Fedora 35, Firefox Nightly). To be clear this is the "Save to PDF" printer, right? Do you have any other print-related setting that could allow us to repro this?
It's not a save to pdf printer, it's an actual, physical printer. Epson L3110 inkjet to be specific.
Assignee | ||
Comment 5•3 years ago
|
||
Ah! I see, sorry I assumed this was about the file picker. Bug 1688720 introduced printing code that depended on this pref. Presumably we don't need to do that when not running under flatpak?
Updated•3 years ago
|
Updated•3 years ago
|
Assignee | ||
Comment 6•3 years ago
|
||
This allows to test and enable the different portals separately. Make
the print portal work only when actually running under flatpak by
default, given it needs more work as per the regressing bug.
And while at it fix a minor leak and some typos in that code.
Updated•3 years ago
|
Assignee | ||
Comment 7•3 years ago
|
||
There's no reason for that function to live in the GIOService interface.
Assignee | ||
Comment 8•3 years ago
|
||
The patches were accidentally submitted in the wrong order but I fixed that in phabricator.
Assignee | ||
Updated•3 years ago
|
Comment 10•3 years ago
|
||
bugherder |
https://hg.mozilla.org/mozilla-central/rev/a369193ad77f
https://hg.mozilla.org/mozilla-central/rev/7bb002b6b870
Reporter | ||
Comment 11•3 years ago
|
||
Any chance this could get backported to 96? This is a pretty big defect.
Comment 12•3 years ago
|
||
Unfortunately we've already built the RCs for 96, so it's too late to uplift there. We can leave it on the radar for a point release should the opportunity arise, however.
Updated•3 years ago
|
Comment 13•3 years ago
|
||
As the current esr version will be around for some time, I did a minimal patch that fixes the issue by avoiding to use portal features for printing (which actually restores the behavior of previous esr versions). This patch has been tested on top of the current debian packages (91.5.0) and works just fine.
And the very same patch also applies cleanly on the current esr version of thunderbird where printing also doesn't work when using portal to get native dialogs and the like.
Updated•3 years ago
|
Comment 14•3 years ago
|
||
I was not able to reproduce the issue on Ubuntu 20.4 using build 95.0a1(2021-10-30) and 97.0a1(2021-12-16) also I used the settings from description, but I do not have an actual printer.
Could you confirm if the issue is still reproducing on latest Beta 97.0? Thank you.
Reporter | ||
Comment 15•3 years ago
|
||
(In reply to Monica Chiorean from comment #14)
I was not able to reproduce the issue on Ubuntu 20.4 using build 95.0a1(2021-10-30) and 97.0a1(2021-12-16) also I used the settings from description, but I do not have an actual printer.
Could you confirm if the issue is still reproducing on latest Beta 97.0? Thank you.
I'm afraid I can't help you, I'm using stable releases only.
Comment 16•3 years ago
|
||
Hello,
I have attempted to reproduce this issue with the STR provided in description and did not succeed.
STR were performed on KDE Neon as well as Ubuntu 20 using the affected build 97.0a1(20211216163155) as well as the latest Nightly 101.0a1(20220414092955) .
If you have access to this OS and configuration, please let us know if this issue still occurs.
Thank you.
Reporter | ||
Comment 17•3 years ago
|
||
(In reply to Vlad Lucaci, QA (:vlucaci) from comment #16)
Hello,
I have attempted to reproduce this issue with the STR provided in description and did not succeed.
STR were performed on KDE Neon as well as Ubuntu 20 using the affected build 97.0a1(20211216163155) as well as the latest Nightly 101.0a1(20220414092955) .
If you have access to this OS and configuration, please let us know if this issue still occurs.
Thank you.
I'm sorry, I don't have access to this OS and configuration. I am unable to help you.
Description
•