Bug 1746559 - Simplify widget portal code. r=jhorak

There's no reason for that function to live in the GIOService interface.

Differential Revision: https://phabricator.services.mozilla.com/D135121