widget/gtk/nsFilePicker.cpp
@@ -171,13 +171,13 @@ nsFilePicker::nsFilePicker()
       mRunning(false),
       mAllowURLs(false),
       mFileChooserDelegate(nullptr) {
-  nsCOMPtr<nsIGIOService> giovfs = do_GetService(NS_GIOSERVICE_CONTRACTID);
   // Due to Bug 1635718 always use portal for file dialog on Wayland.
+  // FIXME: This is not what this code is doing? Pref is default false.
   if (widget::GdkIsWaylandDisplay()) {
     mUseNativeFileChooser =
         Preferences::GetBool("widget.use-xdg-desktop-portal", true);
   } else {
-    giovfs->ShouldUseFlatpakPortal(&mUseNativeFileChooser);
+    mUseNativeFileChooser = widget::ShouldUsePortal();
   }
 }
 
